                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-05-2006 changed: my weather location selector (id=3) can now be a select button.
 - 01-05-2006 fixed: inexact matches from allmusic.com where not converted to UTF-8
 - 01-05-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 01-05-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 01-05-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 01-05-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 01-05-2006 fixed: cd-ripper can't rip cd's whose cddb info contains none latin characters
 - 01-05-2006 changed: cd-ripper's lame encoder now uses --vbr-new for ripping in vbr mode
 - 01-05-2006 changed: cd-ripper now writes unicode tags
 - 01-05-2006 changed: FATX filename shortening now makes sure to keep important numbers such as .partXXX.rar, CD2.avi in filenames (for FTP uploads to xbox, etc.)
 - 01-05-2006 fixed: shoutcast and lastfm directories didn't honor hide/show parent folder item.
 - 01-05-2006 fixed: album information showed for playlists in context menu.
 - 01-05-2006 fixed: really fixed xbmc.runxbe + .cut files.
 - 01-05-2006 changed: Keymap settings - Keyboard users have more control over fullscreen info. Changes also mean remote,gamepad,keyboard users have consistent buttons on all fullscreen media.
 - 01-05-2006 fixed: [ 1478394 ] "My Pictures" info-bar problem.
 - 30-04-2006 fixed: [ 1479326 ] No ip message when not connected
 - 30-04-2006 fixed: [ 1479638 ] "Settings" item in filemanagers contextmenu not working
 - 30-04-2006 fixed: cddb infomation may not be returned as utf-8, if this is the case the info will be converted from user charset to utf-8